--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-icons": "^4.11.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.16.0",
-    "react-toastify": "^9.1.3"
+    "react-toastify": "^9.1.3",
+    "visitorapi": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
